...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".profile.presentation.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/frg_user_profile__appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
...

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/frg__user_profile__toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:layout_collapseMode="pin">

            <androidx.appcompat.widget.AppCompatTextView
...
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:text="Поиск" />

            <ImageView
                android:id="@+id/frg__user_profile__ib_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:background="?selectableItemBackground"
                android:padding="8dp" />

            <ImageView
                android:id="@+id/frg__user_profile__iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="?selectableItemBackground"
                android:padding="8dp"
                android:src="@drawable/ic_back_24" />
...

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/frg_user_profile__rv_posts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
