...
            android:textSize="20sp"
            tools:text="Поиск" />

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/frg_search__mc_search"
        android:layout_width="@dimen/auth_et_width"
        android:layout_height="@dimen/auth_et_height"
        android:background="@color/white"
        app:cardCornerRadius="@dimen/auth_mc_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frg_search__toolbar"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/frg_search__et_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:hint="Поиск"
            android:paddingHorizontal="@dimen/auth_et_padding_horizontal"
            android:textColor="@color/black"
            android:textColorHint="@color/text_secondary" />

    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/frg_search__rv_search_results"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
